Compiler/Compiler4/PARSER/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEW

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> Z
Rule 2     Z -> CLASSDECLARATION Z
Rule 3     Z -> EMPTY
Rule 4     CLASSDECLARATION -> CLASS ID OPENAKOL A CLOSEAKOL
Rule 5     A -> FIELDDECLARATION A
Rule 6     A -> METHODDECLARATION A
Rule 7     A -> EMPTY
Rule 8     FIELDDECLARATION -> DECLARATORS ID SEMI
Rule 9     FIELDDECLARATION -> STATEMENT
Rule 10    METHODDECLARATION -> DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
Rule 11    METHODDECLARATION -> DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
Rule 12    METHODDECLARATION -> DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B CLOSEAKOL
Rule 13    METHODDECLARATION -> DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B CLOSEAKOL
Rule 14    B -> STATEMENT B
Rule 15    B -> EMPTY
Rule 16    DECLARATORS -> C STATIC TYPE
Rule 17    DECLARATORS -> STATIC TYPE
Rule 18    DECLARATORS -> C TYPE
Rule 19    DECLARATORS -> TYPE
Rule 20    C -> PUBLIC
Rule 21    C -> PRIVATE
Rule 22    EMPTY -> <empty>
Rule 23    TYPE -> PRIMTYPE
Rule 24    TYPE -> CLASSTYPE
Rule 25    TYPE -> ARRTYPE
Rule 26    PRIMTYPE -> INT
Rule 27    PRIMTYPE -> BOOLEAN
Rule 28    PRIMTYPE -> STRING
Rule 29    PRIMTYPE -> DOUBLE
Rule 30    PRIMTYPE -> CHARACTER
Rule 31    PRIMTYPE -> FLOAT
Rule 32    PRIMTYPE -> VOID
Rule 33    CLASSTYPE -> ID
Rule 34    ARRTYPE -> INT OPENBRACKET CLOSEBRACKET
Rule 35    ARRTYPE -> CLASSTYPE OPENBRACKET CLOSEBRACKET
Rule 36    PARAMERERLIST -> TYPE ID D
Rule 37    D -> COMMA TYPE ID D
Rule 38    D -> EMPTY
Rule 39    ARGUMENTLIST -> EXPRESSION E
Rule 40    E -> COMMA EXPRESSION
Rule 41    E -> EMPTY
Rule 42    REFERENCE -> THIS G
Rule 43    REFERENCE -> ID G
Rule 44    G -> DOT ID G
Rule 45    G -> EMPTY
Rule 46    STATEMENT -> OPENAKOL H CLOSEAKOL
Rule 47    STATEMENT -> EXPRESSION
Rule 48    STATEMENT -> REFERENCE OPENBRACKET EXPRESSION CLOSEBRACKET ASSIGN EXPRESSION SEMI
Rule 49    STATEMENT -> REFERENCE ASSIGN EXPRESSION SEMI
Rule 50    STATEMENT -> REFERENCE OPENPAR CLOSEPAR SEMI
Rule 51    STATEMENT -> REFERENCE OPENPAR ARGUMENTLIST CLOSEPAR SEMI
Rule 52    STATEMENT -> IF OPENPAR EXPRESSION CLOSEPAR STATEMENT ELSE STATEMENT
Rule 53    STATEMENT -> IF OPENPAR EXPRESSION CLOSEPAR STATEMENT
Rule 54    STATEMENT -> FOR OPENPAR EXPRESSION CLOSEPAR STATEMENT
Rule 55    STATEMENT -> WHILE OPENPAR EXPRESSION CLOSEPAR STATEMENT
Rule 56    H -> STATEMENT H
Rule 57    H -> EMPTY
Rule 58    EXPRESSION -> EXPRESSION1
Rule 59    EXPRESSION -> EXPRESSION2
Rule 60    EXPRESSION -> EXPRESSION3
Rule 61    EXPRESSION -> EXPRESSION4
Rule 62    EXPRESSION -> EXPRESSION5
Rule 63    EXPRESSION -> EXPRESSION6
Rule 64    EXPRESSION1 -> ID ASSIGN ID OP ID SEMI
Rule 65    EXPRESSION2 -> TYPE ID ASSIGN ID OP ID SEMI
Rule 66    EXPRESSION3 -> TYPE ID SEMI
Rule 67    EXPRESSION4 -> TYPE ID ASSIGN VALUE SEMI
Rule 68    EXPRESSION5 -> ID ASSIGN VALUE SEMI
Rule 69    VALUE -> VALUE1
Rule 70    VALUE -> VALUE2
Rule 71    VALUE1 -> NUMBER
Rule 72    VALUE2 -> CHAR
Rule 73    EXPRESSION6 -> TRUE
Rule 74    EXPRESSION6 -> FALSE
Rule 75    EXPRESSION6 -> NULL
Rule 76    EXPRESSION6 -> ID
Rule 77    EXPRESSION6 -> VALUE
Rule 78    EXPRESSION6 -> TYPE ID ASSIGN EXPRESSION OP EXPRESSION SEMI
Rule 79    EXPRESSION6 -> ID ASSIGN ID OP ID OP ID SEMI
Rule 80    EXPRESSION6 -> EMPTY
Rule 81    EXPRESSION6 -> REFERENCE ASSIGN NUMBER SEMI REFERENCE OP REFERENCE SEMI I
Rule 82    OP -> LESSEQUAL
Rule 83    OP -> ASSIGN
Rule 84    OP -> EQUALS
Rule 85    OP -> GREATEREQUAL
Rule 86    OP -> GREATERTHAN
Rule 87    OP -> LESSTHAN
Rule 88    OP -> ADD
Rule 89    OP -> MINUS
Rule 90    OP -> MULT
Rule 91    OP -> NOTEQUAL
Rule 92    OP -> DIVIDE
Rule 93    OP -> PEQUAL
Rule 94    OP -> MEQUAL
Rule 95    OP -> PLUSPLUS
Rule 96    I -> REFERENCE OP
Rule 97    I -> REFERENCE OP NUMBER
Rule 98    I -> REFERENCE OP REFERENCE

Terminals, with rules where they appear

ADD                  : 88
ASSIGN               : 48 49 64 65 67 68 78 79 81 83
BOOLEAN              : 27
CHAR                 : 72
CHARACTER            : 30
CLASS                : 4
CLOSEAKOL            : 4 10 11 12 13 46
CLOSEBRACKET         : 34 35 48
CLOSEPAR             : 10 11 12 13 50 51 52 53 54 55
COMMA                : 37 40
DIVIDE               : 92
DOT                  : 44
DOUBLE               : 29
ELSE                 : 52
EQUALS               : 84
FALSE                : 74
FLOAT                : 31
FOR                  : 54
GREATEREQUAL         : 85
GREATERTHAN          : 86
ID                   : 4 8 10 11 12 13 33 36 37 43 44 64 64 64 65 65 65 66 67 68 76 78 79 79 79 79
IF                   : 52 53
INT                  : 26 34
LESSEQUAL            : 82
LESSTHAN             : 87
MEQUAL               : 94
MINUS                : 89
MULT                 : 90
NEW                  : 
NOTEQUAL             : 91
NULL                 : 75
NUMBER               : 71 81 97
OPENAKOL             : 4 10 11 12 13 46
OPENBRACKET          : 34 35 48
OPENPAR              : 10 11 12 13 50 51 52 53 54 55
PEQUAL               : 93
PLUSPLUS             : 95
PRIVATE              : 21
PUBLIC               : 20
RETURN               : 10 11
SEMI                 : 8 10 11 48 49 50 51 64 65 66 67 68 78 79 81 81
STATIC               : 16 17
STRING               : 28
THIS                 : 42
TRUE                 : 73
VOID                 : 32
WHILE                : 55
error                : 

Nonterminals, with rules where they appear

A                    : 4 5 6
ARGUMENTLIST         : 51
ARRTYPE              : 25
B                    : 10 11 12 13 14
C                    : 16 18
CLASSDECLARATION     : 2
CLASSTYPE            : 24 35
D                    : 36 37
DECLARATORS          : 8 10 11 12 13
E                    : 39
EMPTY                : 3 7 15 38 41 45 57 80
EXPRESSION           : 10 11 39 40 47 48 48 49 52 53 54 55 78 78
EXPRESSION1          : 58
EXPRESSION2          : 59
EXPRESSION3          : 60
EXPRESSION4          : 61
EXPRESSION5          : 62
EXPRESSION6          : 63
FIELDDECLARATION     : 5
G                    : 42 43 44
H                    : 46 56
I                    : 81
METHODDECLARATION    : 6
OP                   : 64 65 78 79 79 81 96 97 98
PARAMERERLIST        : 10 12
PRIMTYPE             : 23
PROGRAM              : 0
REFERENCE            : 48 49 50 51 81 81 81 96 97 98 98
STATEMENT            : 9 14 52 52 53 54 55 56
TYPE                 : 16 17 18 19 36 37 65 66 67 78
VALUE                : 67 68 77
VALUE1               : 69
VALUE2               : 70
Z                    : 1 2

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . Z
    (2) Z -> . CLASSDECLARATION Z
    (3) Z -> . EMPTY
    (4) CLASSDECLARATION -> . CLASS ID OPENAKOL A CLOSEAKOL
    (22) EMPTY -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 22 (EMPTY -> .)

    PROGRAM                        shift and go to state 1
    Z                              shift and go to state 2
    CLASSDECLARATION               shift and go to state 3
    EMPTY                          shift and go to state 4

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> Z .

    $end            reduce using rule 1 (PROGRAM -> Z .)


state 3

    (2) Z -> CLASSDECLARATION . Z
    (2) Z -> . CLASSDECLARATION Z
    (3) Z -> . EMPTY
    (4) CLASSDECLARATION -> . CLASS ID OPENAKOL A CLOSEAKOL
    (22) EMPTY -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 22 (EMPTY -> .)

    CLASSDECLARATION               shift and go to state 3
    Z                              shift and go to state 6
    EMPTY                          shift and go to state 4

state 4

    (3) Z -> EMPTY .

    $end            reduce using rule 3 (Z -> EMPTY .)


state 5

    (4) CLASSDECLARATION -> CLASS . ID OPENAKOL A CLOSEAKOL

    ID              shift and go to state 7


state 6

    (2) Z -> CLASSDECLARATION Z .

    $end            reduce using rule 2 (Z -> CLASSDECLARATION Z .)


state 7

    (4) CLASSDECLARATION -> CLASS ID . OPENAKOL A CLOSEAKOL

    OPENAKOL        shift and go to state 8


state 8

    (4) CLASSDECLARATION -> CLASS ID OPENAKOL . A CLOSEAKOL
    (5) A -> . FIELDDECLARATION A
    (6) A -> . METHODDECLARATION A
    (7) A -> . EMPTY
    (8) FIELDDECLARATION -> . DECLARATORS ID SEMI
    (9) FIELDDECLARATION -> . STATEMENT
    (10) METHODDECLARATION -> . DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (11) METHODDECLARATION -> . DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (12) METHODDECLARATION -> . DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B CLOSEAKOL
    (13) METHODDECLARATION -> . DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B CLOSEAKOL
    (22) EMPTY -> .
    (16) DECLARATORS -> . C STATIC TYPE
    (17) DECLARATORS -> . STATIC TYPE
    (18) DECLARATORS -> . C TYPE
    (19) DECLARATORS -> . TYPE
    (46) STATEMENT -> . OPENAKOL H CLOSEAKOL
    (47) STATEMENT -> . EXPRESSION
    (48) STATEMENT -> . REFERENCE OPENBRACKET EXPRESSION CLOSEBRACKET ASSIGN EXPRESSION SEMI
    (49) STATEMENT -> . REFERENCE ASSIGN EXPRESSION SEMI
    (50) STATEMENT -> . REFERENCE OPENPAR CLOSEPAR SEMI
    (51) STATEMENT -> . REFERENCE OPENPAR ARGUMENTLIST CLOSEPAR SEMI
    (52) STATEMENT -> . IF OPENPAR EXPRESSION CLOSEPAR STATEMENT ELSE STATEMENT
    (53) STATEMENT -> . IF OPENPAR EXPRESSION CLOSEPAR STATEMENT
    (54) STATEMENT -> . FOR OPENPAR EXPRESSION CLOSEPAR STATEMENT
    (55) STATEMENT -> . WHILE OPENPAR EXPRESSION CLOSEPAR STATEMENT
    (20) C -> . PUBLIC
    (21) C -> . PRIVATE
    (23) TYPE -> . PRIMTYPE
    (24) TYPE -> . CLASSTYPE
    (25) TYPE -> . ARRTYPE
    (58) EXPRESSION -> . EXPRESSION1
    (59) EXPRESSION -> . EXPRESSION2
    (60) EXPRESSION -> . EXPRESSION3
    (61) EXPRESSION -> . EXPRESSION4
    (62) EXPRESSION -> . EXPRESSION5
    (63) EXPRESSION -> . EXPRESSION6
    (42) REFERENCE -> . THIS G
    (43) REFERENCE -> . ID G
    (26) PRIMTYPE -> . INT
    (27) PRIMTYPE -> . BOOLEAN
    (28) PRIMTYPE -> . STRING
    (29) PRIMTYPE -> . DOUBLE
    (30) PRIMTYPE -> . CHARACTER
    (31) PRIMTYPE -> . FLOAT
    (32) PRIMTYPE -> . VOID
    (33) CLASSTYPE -> . ID
    (34) ARRTYPE -> . INT OPENBRACKET CLOSEBRACKET
    (35) ARRTYPE -> . CLASSTYPE OPENBRACKET CLOSEBRACKET
    (64) EXPRESSION1 -> . ID ASSIGN ID OP ID SEMI
    (65) EXPRESSION2 -> . TYPE ID ASSIGN ID OP ID SEMI
    (66) EXPRESSION3 -> . TYPE ID SEMI
    (67) EXPRESSION4 -> . TYPE ID ASSIGN VALUE SEMI
    (68) EXPRESSION5 -> . ID ASSIGN VALUE SEMI
    (73) EXPRESSION6 -> . TRUE
    (74) EXPRESSION6 -> . FALSE
    (75) EXPRESSION6 -> . NULL
    (76) EXPRESSION6 -> . ID
    (77) EXPRESSION6 -> . VALUE
    (78) EXPRESSION6 -> . TYPE ID ASSIGN EXPRESSION OP EXPRESSION SEMI
    (79) EXPRESSION6 -> . ID ASSIGN ID OP ID OP ID SEMI
    (80) EXPRESSION6 -> . EMPTY
    (81) EXPRESSION6 -> . REFERENCE ASSIGN NUMBER SEMI REFERENCE OP REFERENCE SEMI I
    (69) VALUE -> . VALUE1
    (70) VALUE -> . VALUE2
    (71) VALUE1 -> . NUMBER
    (72) VALUE2 -> . CHAR

  ! shift/reduce conflict for STATIC resolved as shift
  ! shift/reduce conflict for OPENAKOL resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for THIS resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for CHARACTER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for NULL resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    CLOSEAKOL       reduce using rule 22 (EMPTY -> .)
    STATIC          shift and go to state 19
    OPENAKOL        shift and go to state 10
    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 24
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 26
    THIS            shift and go to state 36
    ID              shift and go to state 9
    INT             shift and go to state 37
    BOOLEAN         shift and go to state 38
    STRING          shift and go to state 39
    DOUBLE          shift and go to state 40
    CHARACTER       shift and go to state 41
    FLOAT           shift and go to state 42
    VOID            shift and go to state 43
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46
    NULL            shift and go to state 47
    NUMBER          shift and go to state 48
    CHAR            shift and go to state 51

  ! STATIC          [ reduce using rule 22 (EMPTY -> .) ]
  ! OPENAKOL        [ reduce using rule 22 (EMPTY -> .) ]
  ! IF              [ reduce using rule 22 (EMPTY -> .) ]
  ! FOR             [ reduce using rule 22 (EMPTY -> .) ]
  ! WHILE           [ reduce using rule 22 (EMPTY -> .) ]
  ! PUBLIC          [ reduce using rule 22 (EMPTY -> .) ]
  ! PRIVATE         [ reduce using rule 22 (EMPTY -> .) ]
  ! THIS            [ reduce using rule 22 (EMPTY -> .) ]
  ! ID              [ reduce using rule 22 (EMPTY -> .) ]
  ! INT             [ reduce using rule 22 (EMPTY -> .) ]
  ! BOOLEAN         [ reduce using rule 22 (EMPTY -> .) ]
  ! STRING          [ reduce using rule 22 (EMPTY -> .) ]
  ! DOUBLE          [ reduce using rule 22 (EMPTY -> .) ]
  ! CHARACTER       [ reduce using rule 22 (EMPTY -> .) ]
  ! FLOAT           [ reduce using rule 22 (EMPTY -> .) ]
  ! VOID            [ reduce using rule 22 (EMPTY -> .) ]
  ! TRUE            [ reduce using rule 22 (EMPTY -> .) ]
  ! FALSE           [ reduce using rule 22 (EMPTY -> .) ]
  ! NULL            [ reduce using rule 22 (EMPTY -> .) ]
  ! NUMBER          [ reduce using rule 22 (EMPTY -> .) ]
  ! CHAR            [ reduce using rule 22 (EMPTY -> .) ]

    A                              shift and go to state 11
    FIELDDECLARATION               shift and go to state 12
    METHODDECLARATION              shift and go to state 13
    EMPTY                          shift and go to state 14
    DECLARATORS                    shift and go to state 15
    STATEMENT                      shift and go to state 16
    EXPRESSION                     shift and go to state 17
    C                              shift and go to state 18
    TYPE                           shift and go to state 20
    REFERENCE                      shift and go to state 21
    PRIMTYPE                       shift and go to state 27
    CLASSTYPE                      shift and go to state 28
    ARRTYPE                        shift and go to state 29
    EXPRESSION1                    shift and go to state 30
    EXPRESSION2                    shift and go to state 31
    EXPRESSION3                    shift and go to state 32
    EXPRESSION4                    shift and go to state 33
    EXPRESSION5                    shift and go to state 34
    EXPRESSION6                    shift and go to state 35
    VALUE                          shift and go to state 44
    VALUE1                         shift and go to state 49
    VALUE2                         shift and go to state 50

state 9

    (43) REFERENCE -> ID . G
    (33) CLASSTYPE -> ID .
    (64) EXPRESSION1 -> ID . ASSIGN ID OP ID SEMI
    (68) EXPRESSION5 -> ID . ASSIGN VALUE SEMI
    (76) EXPRESSION6 -> ID .
    (79) EXPRESSION6 -> ID . ASSIGN ID OP ID OP ID SEMI
    (44) G -> . DOT ID G
    (45) G -> . EMPTY
    (22) EMPTY -> .

  ! reduce/reduce conflict for ID resolved using rule 33 (CLASSTYPE -> ID .)
  ! reduce/reduce conflict for OPENBRACKET resolved using rule 22 (EMPTY -> .)
  ! shift/reduce conflict for ASSIGN resolved as shift
    ID              reduce using rule 33 (CLASSTYPE -> ID .)
    ASSIGN          shift and go to state 53
    STATIC          reduce using rule 76 (EXPRESSION6 -> ID .)
    OPENAKOL        reduce using rule 76 (EXPRESSION6 -> ID .)
    IF              reduce using rule 76 (EXPRESSION6 -> ID .)
    FOR             reduce using rule 76 (EXPRESSION6 -> ID .)
    WHILE           reduce using rule 76 (EXPRESSION6 -> ID .)
    PUBLIC          reduce using rule 76 (EXPRESSION6 -> ID .)
    PRIVATE         reduce using rule 76 (EXPRESSION6 -> ID .)
    THIS            reduce using rule 76 (EXPRESSION6 -> ID .)
    INT             reduce using rule 76 (EXPRESSION6 -> ID .)
    BOOLEAN         reduce using rule 76 (EXPRESSION6 -> ID .)
    STRING          reduce using rule 76 (EXPRESSION6 -> ID .)
    DOUBLE          reduce using rule 76 (EXPRESSION6 -> ID .)
    CHARACTER       reduce using rule 76 (EXPRESSION6 -> ID .)
    FLOAT           reduce using rule 76 (EXPRESSION6 -> ID .)
    VOID            reduce using rule 76 (EXPRESSION6 -> ID .)
    TRUE            reduce using rule 76 (EXPRESSION6 -> ID .)
    FALSE           reduce using rule 76 (EXPRESSION6 -> ID .)
    NULL            reduce using rule 76 (EXPRESSION6 -> ID .)
    NUMBER          reduce using rule 76 (EXPRESSION6 -> ID .)
    CHAR            reduce using rule 76 (EXPRESSION6 -> ID .)
    CLOSEAKOL       reduce using rule 76 (EXPRESSION6 -> ID .)
    DOT             shift and go to state 54
    OPENBRACKET     reduce using rule 22 (EMPTY -> .)
    OPENPAR         reduce using rule 22 (EMPTY -> .)

  ! OPENBRACKET     [ reduce using rule 33 (CLASSTYPE -> ID .) ]
  ! ID              [ reduce using rule 76 (EXPRESSION6 -> ID .) ]
  ! ASSIGN          [ reduce using rule 22 (EMPTY -> .) ]

    G                              shift and go to state 52
    EMPTY                          shift and go to state 55

state 10

    (46) STATEMENT -> OPENAKOL . H CLOSEAKOL
    (56) H -> . STATEMENT H
    (57) H -> . EMPTY
    (46) STATEMENT -> . OPENAKOL H CLOSEAKOL
    (47) STATEMENT -> . EXPRESSION
    (48) STATEMENT -> . REFERENCE OPENBRACKET EXPRESSION CLOSEBRACKET ASSIGN EXPRESSION SEMI
    (49) STATEMENT -> . REFERENCE ASSIGN EXPRESSION SEMI
    (50) STATEMENT -> . REFERENCE OPENPAR CLOSEPAR SEMI
    (51) STATEMENT -> . REFERENCE OPENPAR ARGUMENTLIST CLOSEPAR SEMI
    (52) STATEMENT -> . IF OPENPAR EXPRESSION CLOSEPAR STATEMENT ELSE STATEMENT
    (53) STATEMENT -> . IF OPENPAR EXPRESSION CLOSEPAR STATEMENT
    (54) STATEMENT -> . FOR OPENPAR EXPRESSION CLOSEPAR STATEMENT
    (55) STATEMENT -> . WHILE OPENPAR EXPRESSION CLOSEPAR STATEMENT
    (22) EMPTY -> .
    (58) EXPRESSION -> . EXPRESSION1
    (59) EXPRESSION -> . EXPRESSION2
    (60) EXPRESSION -> . EXPRESSION3
    (61) EXPRESSION -> . EXPRESSION4
    (62) EXPRESSION -> . EXPRESSION5
    (63) EXPRESSION -> . EXPRESSION6
    (42) REFERENCE -> . THIS G
    (43) REFERENCE -> . ID G
    (64) EXPRESSION1 -> . ID ASSIGN ID OP ID SEMI
    (65) EXPRESSION2 -> . TYPE ID ASSIGN ID OP ID SEMI
    (66) EXPRESSION3 -> . TYPE ID SEMI
    (67) EXPRESSION4 -> . TYPE ID ASSIGN VALUE SEMI
    (68) EXPRESSION5 -> . ID ASSIGN VALUE SEMI
    (73) EXPRESSION6 -> . TRUE
    (74) EXPRESSION6 -> . FALSE
    (75) EXPRESSION6 -> . NULL
    (76) EXPRESSION6 -> . ID
    (77) EXPRESSION6 -> . VALUE
    (78) EXPRESSION6 -> . TYPE ID ASSIGN EXPRESSION OP EXPRESSION SEMI
    (79) EXPRESSION6 -> . ID ASSIGN ID OP ID OP ID SEMI
    (80) EXPRESSION6 -> . EMPTY
    (81) EXPRESSION6 -> . REFERENCE ASSIGN NUMBER SEMI REFERENCE OP REFERENCE SEMI I
    (23) TYPE -> . PRIMTYPE
    (24) TYPE -> . CLASSTYPE
    (25) TYPE -> . ARRTYPE
    (69) VALUE -> . VALUE1
    (70) VALUE -> . VALUE2
    (26) PRIMTYPE -> . INT
    (27) PRIMTYPE -> . BOOLEAN
    (28) PRIMTYPE -> . STRING
    (29) PRIMTYPE -> . DOUBLE
    (30) PRIMTYPE -> . CHARACTER
    (31) PRIMTYPE -> . FLOAT
    (32) PRIMTYPE -> . VOID
    (33) CLASSTYPE -> . ID
    (34) ARRTYPE -> . INT OPENBRACKET CLOSEBRACKET
    (35) ARRTYPE -> . CLASSTYPE OPENBRACKET CLOSEBRACKET
    (71) VALUE1 -> . NUMBER
    (72) VALUE2 -> . CHAR

  ! shift/reduce conflict for OPENAKOL resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for THIS resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for NULL resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for CHARACTER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    OPENAKOL        shift and go to state 10
    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 24
    CLOSEAKOL       reduce using rule 22 (EMPTY -> .)
    THIS            shift and go to state 36
    ID              shift and go to state 59
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46
    NULL            shift and go to state 47
    INT             shift and go to state 37
    BOOLEAN         shift and go to state 38
    STRING          shift and go to state 39
    DOUBLE          shift and go to state 40
    CHARACTER       shift and go to state 41
    FLOAT           shift and go to state 42
    VOID            shift and go to state 43
    NUMBER          shift and go to state 48
    CHAR            shift and go to state 51

  ! OPENAKOL        [ reduce using rule 22 (EMPTY -> .) ]
  ! IF              [ reduce using rule 22 (EMPTY -> .) ]
  ! FOR             [ reduce using rule 22 (EMPTY -> .) ]
  ! WHILE           [ reduce using rule 22 (EMPTY -> .) ]
  ! THIS            [ reduce using rule 22 (EMPTY -> .) ]
  ! ID              [ reduce using rule 22 (EMPTY -> .) ]
  ! TRUE            [ reduce using rule 22 (EMPTY -> .) ]
  ! FALSE           [ reduce using rule 22 (EMPTY -> .) ]
  ! NULL            [ reduce using rule 22 (EMPTY -> .) ]
  ! INT             [ reduce using rule 22 (EMPTY -> .) ]
  ! BOOLEAN         [ reduce using rule 22 (EMPTY -> .) ]
  ! STRING          [ reduce using rule 22 (EMPTY -> .) ]
  ! DOUBLE          [ reduce using rule 22 (EMPTY -> .) ]
  ! CHARACTER       [ reduce using rule 22 (EMPTY -> .) ]
  ! FLOAT           [ reduce using rule 22 (EMPTY -> .) ]
  ! VOID            [ reduce using rule 22 (EMPTY -> .) ]
  ! NUMBER          [ reduce using rule 22 (EMPTY -> .) ]
  ! CHAR            [ reduce using rule 22 (EMPTY -> .) ]

    H                              shift and go to state 56
    STATEMENT                      shift and go to state 57
    EMPTY                          shift and go to state 58
    EXPRESSION                     shift and go to state 17
    REFERENCE                      shift and go to state 21
    EXPRESSION1                    shift and go to state 30
    EXPRESSION2                    shift and go to state 31
    EXPRESSION3                    shift and go to state 32
    EXPRESSION4                    shift and go to state 33
    EXPRESSION5                    shift and go to state 34
    EXPRESSION6                    shift and go to state 35
    TYPE                           shift and go to state 60
    VALUE                          shift and go to state 44
    PRIMTYPE                       shift and go to state 27
    CLASSTYPE                      shift and go to state 28
    ARRTYPE                        shift and go to state 29
    VALUE1                         shift and go to state 49
    VALUE2                         shift and go to state 50

state 11

    (4) CLASSDECLARATION -> CLASS ID OPENAKOL A . CLOSEAKOL

    CLOSEAKOL       shift and go to state 61


state 12

    (5) A -> FIELDDECLARATION . A
    (5) A -> . FIELDDECLARATION A
    (6) A -> . METHODDECLARATION A
    (7) A -> . EMPTY
    (8) FIELDDECLARATION -> . DECLARATORS ID SEMI
    (9) FIELDDECLARATION -> . STATEMENT
    (10) METHODDECLARATION -> . DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (11) METHODDECLARATION -> . DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (12) METHODDECLARATION -> . DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B CLOSEAKOL
    (13) METHODDECLARATION -> . DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B CLOSEAKOL
    (22) EMPTY -> .
    (16) DECLARATORS -> . C STATIC TYPE
    (17) DECLARATORS -> . STATIC TYPE
    (18) DECLARATORS -> . C TYPE
    (19) DECLARATORS -> . TYPE
    (46) STATEMENT -> . OPENAKOL H CLOSEAKOL
    (47) STATEMENT -> . EXPRESSION
    (48) STATEMENT -> . REFERENCE OPENBRACKET EXPRESSION CLOSEBRACKET ASSIGN EXPRESSION SEMI
    (49) STATEMENT -> . REFERENCE ASSIGN EXPRESSION SEMI
    (50) STATEMENT -> . REFERENCE OPENPAR CLOSEPAR SEMI
    (51) STATEMENT -> . REFERENCE OPENPAR ARGUMENTLIST CLOSEPAR SEMI
    (52) STATEMENT -> . IF OPENPAR EXPRESSION CLOSEPAR STATEMENT ELSE STATEMENT
    (53) STATEMENT -> . IF OPENPAR EXPRESSION CLOSEPAR STATEMENT
    (54) STATEMENT -> . FOR OPENPAR EXPRESSION CLOSEPAR STATEMENT
    (55) STATEMENT -> . WHILE OPENPAR EXPRESSION CLOSEPAR STATEMENT
    (20) C -> . PUBLIC
    (21) C -> . PRIVATE
    (23) TYPE -> . PRIMTYPE
    (24) TYPE -> . CLASSTYPE
    (25) TYPE -> . ARRTYPE
    (58) EXPRESSION -> . EXPRESSION1
    (59) EXPRESSION -> . EXPRESSION2
    (60) EXPRESSION -> . EXPRESSION3
    (61) EXPRESSION -> . EXPRESSION4
    (62) EXPRESSION -> . EXPRESSION5
    (63) EXPRESSION -> . EXPRESSION6
    (42) REFERENCE -> . THIS G
    (43) REFERENCE -> . ID G
    (26) PRIMTYPE -> . INT
    (27) PRIMTYPE -> . BOOLEAN
    (28) PRIMTYPE -> . STRING
    (29) PRIMTYPE -> . DOUBLE
    (30) PRIMTYPE -> . CHARACTER
    (31) PRIMTYPE -> . FLOAT
    (32) PRIMTYPE -> . VOID
    (33) CLASSTYPE -> . ID
    (34) ARRTYPE -> . INT OPENBRACKET CLOSEBRACKET
    (35) ARRTYPE -> . CLASSTYPE OPENBRACKET CLOSEBRACKET
    (64) EXPRESSION1 -> . ID ASSIGN ID OP ID SEMI
    (65) EXPRESSION2 -> . TYPE ID ASSIGN ID OP ID SEMI
    (66) EXPRESSION3 -> . TYPE ID SEMI
    (67) EXPRESSION4 -> . TYPE ID ASSIGN VALUE SEMI
    (68) EXPRESSION5 -> . ID ASSIGN VALUE SEMI
    (73) EXPRESSION6 -> . TRUE
    (74) EXPRESSION6 -> . FALSE
    (75) EXPRESSION6 -> . NULL
    (76) EXPRESSION6 -> . ID
    (77) EXPRESSION6 -> . VALUE
    (78) EXPRESSION6 -> . TYPE ID ASSIGN EXPRESSION OP EXPRESSION SEMI
    (79) EXPRESSION6 -> . ID ASSIGN ID OP ID OP ID SEMI
    (80) EXPRESSION6 -> . EMPTY
    (81) EXPRESSION6 -> . REFERENCE ASSIGN NUMBER SEMI REFERENCE OP REFERENCE SEMI I
    (69) VALUE -> . VALUE1
    (70) VALUE -> . VALUE2
    (71) VALUE1 -> . NUMBER
    (72) VALUE2 -> . CHAR
